--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="form-container">
@@ -57,5 +58,7 @@
             <button type="submit" class="signup-btn">Signup</button>
         </form>
     </div>
+
+    
 </body>
 </html>
